--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.995.0",
+    "@aws-sdk/s3-request-presigner": "^3.995.0",
     "@captchafox/react": "^1.10.0",
     "@daveyplate/better-auth-ui": "^3.3.15",
     "@hcaptcha/react-hcaptcha": "^2.0.2",
